[package]
name = "high-performance-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.36", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
dotenv = "0.15"
futures = "0.3"
anyhow = "1.0"
num_cpus = "1.16"

[features]
default = []

[build-dependencies]
rustc_version = "0.4"